# GPXProfilePlotter

./: .gitignore  README.md  pyproject.toml
src/gpxprofpy/: __init__.py  main.py  params.py  points.py  profile.py  profiler.py  segments.py  utils.py
tests/integration/: test_segments.py
tests/unit/: test_distance.py  test_segments.py  test_slope.py
