[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpxprofpy"
version = "0.0.3"
authors = [{ name = "Timothee FAGET", email = "timotheefaget@gmail.com" }]
description = "Package with tool to plot a GPX elevation profile"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["gpxpy >= 1.6.0", "matplotlib >= 3.9.0", "numpy >= 2.0.0"]

[project.urls]
Homepage = "https://github.com/timothee-faget/GPXProfilePlotter"
Issues = "https://github.com/timothee-faget/GPXProfilePlotter/issues"
